made mongodb start using replication with better performance tuning set j=1, w=2 fixed css for security page alignment issue when enter passcode corrected panic flow in arm or disarm status. corrected at simulator as well

--- a/app/mobile/styles/main.scss
+++ b/app/mobile/styles/main.scss
@@ -174,9 +174,10 @@ $blur: blur(3px);
     }
 }
 
-
+.pt-page-2 div.blur, .body2a div.blur:first-child {
+    -webkit-filter: blur(8px);
+}
 div.blur {
-    @include dimenPos(100%, 60px, fixed);
     -webkit-filter: $blur;
     z-index: 5;
 }
